test/SemanticAnalysis/Class/DuplicateClass.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s
// XFAIL: *

class TestClass() { }

// CHECK: .loci:8:1: error: type 'TestClass' clashes with previous type of the same name
class TestClass() { }

// CHECK: 1 error generated.
